Avoid layout flickering

--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -13,6 +13,9 @@
 
   .logo {
     width: 3.052rem;
+    height: 3.052rem;
+    border-radius: 50%;
+    background-color: #F3F3F3;
   }
 
   .logo-text {
