--- a/_sass/pages/photo.scss
+++ b/_sass/pages/photo.scss
@@ -4,10 +4,19 @@
     color: #777677;
   }
 
+  .item div {
+    padding-bottom: 56.25%;
+    position: relative;
+    background-color: #f3f3f3;
+  }
+
   .item img {
     max-width: 100%;
     width: 100%;
     max-height: 100vh;
-    background-color: #f3f3f3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0; // Prevent alt text to be shown while img is loading
   }
 }
