--- a/_sass/pages/photos.scss
+++ b/_sass/pages/photos.scss
@@ -9,16 +9,22 @@
     flex-basis: 100%;
     color: #777677;
     margin-bottom: 1rem;
-  }
-
-  .item img {
     background-color: #f3f3f3;
-    max-width: 100%;
+    position: relative;
   }
 
   .item a {
     display: block;
     line-height: 0;
+    padding-bottom: 56.25%;
+  }
+
+  .item img {
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0; // Prevent alt text to be shown while img is loading
   }
 
   @media (min-width: 40.0rem) and (min-height: 40.0rem) {
